Updated scale and shared image profiles, new scale 4x benchmark results (ductus, pisces, marlin 0.3 and 0.4), marlin upgraded to 0.4 release